# GulfCast

./: .gitignore  Dockerfile.api  Dockerfile.ui  Makefile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  run_docker.sh  run_local.sh
assets/: plants.csv  ports.csv
config/: risk.yaml
infra/: docker-compose.yml
infra/docker/: Dockerfile.api  Dockerfile.base  Dockerfile.model.cpu  Dockerfile.model.gpu  Dockerfile.ui
notebooks/: ablation_inspector.ipynb
services/: __init__.py
services/api/: main.py  scenario_jobs.py
services/features/: __init__.py  build.py
services/ingest/: __init__.py  assets.py  cfsv2.py  earthdata.py  era5.py  imerg.py  iri.py  shared.py
services/model/: __init__.py  score.py  stack.py  train.py  train_unet.py
services/risk/: __init__.py  climada_adapter.py  compute.py  curves.yaml  hazards.py  impact_functions.yaml  loss_models.py  metrics.py  physrisk_adapter.py
services/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
services/ui/src/: App.tsx  main.css
services/ui/src/components/: AblationControls.tsx  AssetTable.tsx  ForecastMap.tsx  InsightsPanel.tsx  MapView.tsx
